# Domain-Checker

./: .env.example  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 55c23546b916_.py  bf1a8e5b1755_changed_link.py  f807e7658112_first_commit.py
app/: main.py
config/: database.py
migrations/: env.py
models/: base.py  domains.py  link.py  users.py
routers/: crud_domain.py  crud_user.py
schemas/: domain.py  domain_schema.py  links_schema.py  user_schema.py
service/: auth.py  bot.py  search.py  utils.py
