[tool.poetry]
name = "domain-cheker"
version = "0.1.0"
description = ""
authors = ["ren <denis30510@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
sqlalchemy = "^2.0.25"
uvicorn = "^0.27.0.post1"
python-dotenv = "^1.0.1"
pytest = "^8.0.0"
httpx = "^0.26.0"
pytest-cov = "^4.1.0"
pydantic = "^2.6.1"
psycopg2-binary = "^2.9.9"
ipython = "^8.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
