[tool.poetry]
name = "domain-cheker"
version = "0.1.0"
description = ""
authors = ["ren <denis30510@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
sqlalchemy = "^2.0.25"
uvicorn = "^0.27.0.post1"
python-dotenv = "^1.0.1"
pytest = "^8.0.0"
httpx = "^0.26.0"
pytest-cov = "^4.1.0"
pydantic = "^2.6.1"
psycopg2-binary = "^2.9.9"
ipython = "^8.21.0"
telebot = "^0.0.5"
passlib = "^1.7.4"
bs4 = "^0.0.2"
lxml = "^5.1.0"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
